fixed layout issue

--- a/style.css
+++ b/style.css
@@ -25,22 +25,15 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100vh; */
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
 .logo {
@@ -50,18 +43,7 @@ h1 {
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  filter: drop-shadow(0 0 2em #099DFDaa);
 }
 
 button {
@@ -102,15 +84,17 @@ button:focus-visible {
 #container {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
-  position: absolute;
+  /* overflow: hidden;
+  position: absolute; */
 }
 
 /* media controls */
 #local-media-controls {
   width: 100vw;
   position: absolute;
-  bottom: 1vh;
+  bottom: 0;
+  background: #fff;
+  padding: 10px 0;
 }
 
 #local-media-controls button {
@@ -147,15 +131,19 @@ button:focus-visible {
   height: 270px;
 }
 
+#local-video div {
+  border-radius: 10px;
+}
+
 #remote-video-container {
   position: absolute;
-  height: 234px;
   width: 100vw;
   left: 0;
+  top: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: nowrap;
   gap: 10px;
   background-color: #000;
@@ -213,7 +201,6 @@ button:focus-visible {
 /* Join Channel Modal */
 #overlay {
   position: fixed;
-  z-index: 10;
   left: 0;
   top: 0;
   width: 100vw;
@@ -225,12 +212,14 @@ button:focus-visible {
 .modal {
   display: none;
   opacity: 0;
+  z-index: -10;
   transition: opacity 0.5s ease;
 }
 
 .show {
   display: block;
   opacity: 1;
+  z-index: 10;
 }
 
 #overlay > * {
@@ -240,7 +229,7 @@ button:focus-visible {
 
 #modal-overlay button[type=submit]{
   max-width: 20vw;
-  margin: 0 auto !important;
+  margin: 0 auto;
 }
 
 #modal-container {
